--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello world!</h1>
     <p>Welcome to my GitHub Pages site!</p>
+    <button onclick="location.href='meche-projects.html'">View Mechanical Engineering Projects</button>
 </body>
 
 </html>
