--- a/meche-projects.html
+++ b/meche-projects.html
@@ -7,7 +7,8 @@
 
 <body>
     <h1>Olin Coursework Projects</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <p></p>
+    <button onclick="location.href='front-page.html'">View Portfolio Front Page</button>
 </body>
 
 </html>
