Add CSS Styles to Dev front-page

--- a/front-page.html
+++ b/front-page.html
@@ -5,7 +5,49 @@
     <meta charset="UTF-8">
     <title>Sohum's Portfolio</title>
     <style>
-        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: lightgray;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav {
+            margin: 20px 0;
+        }
+
+        nav ul {
+            display: flex;
+            justify-content: center;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav li {
+            margin: 0 10px;
+        }
+
+        section {
+            padding: 20px;
+        }
+
+        #about-me {
+            background-color: lightblue;
+        }
+
+        #work {
+            background-color: lightyellow;
+        }
+
+        #contact {
+            background-color: lightcoral;
+        }
     </style>
 </head>
 
