--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1><a href="#">[Your Name]</a></h1>
+                <h1><a href="https://sohum-prime.github.io/">Sohum Kothavade</a></h1>
             </div>
             <nav>
                 <ul>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Resume</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Accounts</a></li>
+                    <li><a href="mailto:'Sohum Kothavade' <skothavade@olin.edu></skothavade>">Contact</a></li>
+                    <li><a href="https://www.linkedin.com/in/sohum-kothavade-a0648b236/">LinkedIn</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,7 +30,9 @@
     <section class="hero">
         <div class="container">
             <h1>Renaissance Engineer</h1>
-            <p>I'm a Mechanical Engineer, Electrical Engineer, Data Scientist, and Computer Scientist</p>
+            <p>I am a Mechanical Engineering (Robotics Concentration) student at the Olin College of Engineering. I am
+                also working towards Master's Degrees in Data Science, Computer Science, and Electrical Engineering, all
+                3 from CU Boulder.</p>
         </div>
     </section>
 
@@ -80,7 +82,7 @@
     <!-- Footer section -->
     <footer>
         <div class="container">
-            <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+            <p>&copy; 2023 Sohum Kothavade. All rights reserved.</p>
         </div>
     </footer>
 
