Testing GPT Formatter

--- a/front-page.html
+++ b/front-page.html
@@ -65,8 +65,8 @@
     <main>
         <section id="about-me">
             <h2>About Me</h2>
-            <p>My name is Sohum, I am a Renaissance Engineer at Olin College, and working towards a Masters in Data
-                Science, Computer Science, and Electrical Engineering, all from CU Boulder</p>
+            <p>My name is Sohum, I am a Renaissance Engineer at Olin College, and working towards Masters Degrees in Data
+                Science, Computer Science, and Electrical Engineering from CU Boulder</p>
         </section>
         <section id="work">
             <h2>My Work</h2>
@@ -77,6 +77,19 @@
             <p>Add information about how people can contact you here.</p>
         </section>
     </main>
+    <div class="project-page">
+        <h2>Project Title</h2>
+        <img src="project.jpg" alt="Project Image">
+        <div class="project-details">
+            <h3>Strengths:</h3>
+            <p>Describe the strengths of the project here.</p>
+            <h3>Weaknesses:</h3>
+            <p>Describe the weaknesses of the project here.</p>
+            <h3>Technologies Used:</h3>
+            <p>Describe the technologies used in the project here.</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
