Test GPT Format

--- a/front-page.html
+++ b/front-page.html
@@ -77,19 +77,19 @@
             <p>Add information about how people can contact you here.</p>
         </section>
     </main>
-    <div class="project-page">
-        <h2>Project Title</h2>
-        <img src="project.jpg" alt="Project Image">
-        <div class="project-details">
-            <h3>Strengths:</h3>
-            <p>Describe the strengths of the project here.</p>
-            <h3>Weaknesses:</h3>
-            <p>Describe the weaknesses of the project here.</p>
-            <h3>Technologies Used:</h3>
-            <p>Describe the technologies used in the project here.</p>
+        <div class="project-page">
+            <h2>Project Title</h2>
+            <img src="/home/sohum/Pictures/Screenshots" alt="Test Image">
+            <div class="project-details">
+                <h3>Strengths:</h3>
+                <p>Describe the strengths of the project here.</p>
+                <h3>Weaknesses:</h3>
+                <p>Describe the weaknesses of the project here.</p>
+                <h3>Technologies Used:</h3>
+                <p>Describe the technologies used in the project here.</p>
+            </div>
         </div>
-    </div>
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
